tests/error/extend_typedef2.gw
// [contains] can't use ref type in class extend
typedef Object[] Class;
class C extends Class {}
C c;
<<<c>>>;
